--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@progress/kendo-drawing": "^1.8.1",
+    "@progress/kendo-react-buttons": "^3.15.0",
+    "@progress/kendo-react-dialogs": "^3.15.0",
+    "@progress/kendo-react-dropdowns": "^3.15.0",
+    "@progress/kendo-react-editor": "^3.15.0",
+    "@progress/kendo-react-inputs": "^3.15.0",
+    "@progress/kendo-react-intl": "^3.15.0",
+    "@progress/kendo-theme-default": "^4.19.0",
+    "axios": "^0.19.2",
+    "html-react-parser": "^0.13.0",
     "next": "9.4.4",
+    "node-html-parser": "^1.2.20",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-element-to-jsx-string": "^14.3.1"
   }
 }
