--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@progress/kendo-react-inputs": "^3.15.0",
     "@progress/kendo-react-intl": "^3.15.0",
     "@progress/kendo-theme-default": "^4.19.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "html-react-parser": "^0.13.0",
-    "next": "9.4.4",
+    "next": "^10.0.7",
     "node-html-parser": "^1.2.20",
     "react": "16.13.1",
     "react-dom": "16.13.1",
